--- a/MyRestful/pom.xml
+++ b/MyRestful/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.mycompany</groupId>
     <artifactId>MyRestful</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version></version>
     <packaging>war</packaging>
 
     <name>MyRestful</name>
