--- a/MyRestful/pom.xml
+++ b/MyRestful/pom.xml
@@ -8,12 +8,14 @@
     <packaging>war</packaging>
 
     <name>MyRestful</name>
-
+   
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.server.bom>14.0.1.Final</version.server.bom>
     </properties>
+    
+  
     
     <dependencies>
         <dependency>
@@ -45,7 +47,6 @@
             <version>2.8.5</version>
         </dependency>
 
-
     </dependencies>
 
     <dependencyManagement>
@@ -66,6 +67,7 @@
     
 
     <build>
+        <finalName>myrest</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
